@@ -1,10 +1,10 @@
 debconf-english
-bridge-utils
+#bridge-utils
 dnsmasq
 elvis-tiny
 iproute
 libsysfs2
-libatm1
+#libatm1
 logrotate
 udev
 ssh
@@ -13,19 +13,19 @@ module-init-tools
 ebtables
 iptables
 arptables
-ifenslave-2.6
+#ifenslave-2.6
 ifupdown
 net-tools
-hostap-utils
-hostapd
-wpasupplicant
-pcmciautils
+#hostap-utils
+#hostapd
+#wpasupplicant
+#pcmciautils
 pciutils
 watchdog
-wireless-tools
-madwifi-tools
-parprouted
-vlan
+#wireless-tools
+#madwifi-tools
+#parprouted
+#vlan
 rsync
 portmap
 less
@@ -47,10 +47,13 @@ lsof
 bash-completion
 #nocatsplash
 resolvconf
-iw
+#iw
 makedev
 sysklogd
 klogd
 #openbsd-inetd
 dhcp3-client
 #pump
+bzip2
+minicom
+syslinux
